Bug 526950 - Replace Number constructor by valueOf
Change-Id: I3f9fe15d704eaba0f27e9dbeced49ca22d464572
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>