@@ -59,22 +59,22 @@ public class StringToNumberConverter extends NumberFormatConverter {
 
 	// This code looks deceptive, but we can't use Double.MIN_VALUE because it
 	// is actually the smallest *positive* number.
-	private static final Double MIN_DOUBLE = new Double(-Double.MAX_VALUE);
-	private static final Double MAX_DOUBLE = new Double(Double.MAX_VALUE);
+	private static final Double MIN_DOUBLE = Double.valueOf(-Double.MAX_VALUE);
+	private static final Double MAX_DOUBLE = Double.valueOf(Double.MAX_VALUE);
 
-	private static final Long MIN_LONG = new Long(Long.MIN_VALUE);
-	private static final Long MAX_LONG = new Long(Long.MAX_VALUE);
+	private static final Long MIN_LONG = Long.valueOf(Long.MIN_VALUE);
+	private static final Long MAX_LONG = Long.valueOf(Long.MAX_VALUE);
 
 	// This code looks deceptive, but we can't use Float.MIN_VALUE because it is
 	// actually the smallest *positive* number.
-	private static final Float MIN_FLOAT = new Float(-Float.MAX_VALUE);
-	private static final Float MAX_FLOAT = new Float(Float.MAX_VALUE);
+	private static final Float MIN_FLOAT = Float.valueOf(-Float.MAX_VALUE);
+	private static final Float MAX_FLOAT = Float.valueOf(Float.MAX_VALUE);
 
-	private static final Short MIN_SHORT = new Short(Short.MIN_VALUE);
-	private static final Short MAX_SHORT = new Short(Short.MAX_VALUE);
+	private static final Short MIN_SHORT = Short.valueOf(Short.MIN_VALUE);
+	private static final Short MAX_SHORT = Short.valueOf(Short.MAX_VALUE);
 
-	private static final Byte MIN_BYTE = new Byte(Byte.MIN_VALUE);
-	private static final Byte MAX_BYTE = new Byte(Byte.MAX_VALUE);
+	private static final Byte MIN_BYTE = Byte.valueOf(Byte.MIN_VALUE);
+	private static final Byte MAX_BYTE = Byte.valueOf(Byte.MAX_VALUE);
 
 	static Class<?> icuBigDecimal = null;
 	static Method icuBigDecimalScale = null;
