@@ -599,7 +599,7 @@ public class EditorRegistry extends EventManager implements IEditorRegistry, IEx
 		}
 
         StringTokenizer extEditors = new StringTokenizer(defaultEditors,
-				new Character(IPreferenceConstants.SEPARATOR).toString());
+				Character.valueOf(IPreferenceConstants.SEPARATOR).toString());
         while (extEditors.hasMoreTokens()) {
             String extEditor = extEditors.nextToken().trim();
             int index = extEditor.indexOf(':');
