@@ -11,11 +11,11 @@
 
 package org.eclipse.core.tests.internal.databinding.conversion;
 
-import junit.framework.TestCase;
-
 import org.eclipse.core.internal.databinding.conversion.StringToByteConverter;
 
 import com.ibm.icu.text.NumberFormat;
+
+import junit.framework.TestCase;
 
 /**
  * @since 1.1
@@ -32,7 +32,7 @@ public class StringToByteConverterTest extends TestCase {
 	}
 
 	public void testConvertsToByte() throws Exception {
-		Byte value = new Byte((byte) 1);
+		Byte value = Byte.valueOf((byte) 1);
 		Byte result = (Byte) converter.convert(numberFormat.format(value));
 
 		assertEquals(value, result);
@@ -40,7 +40,7 @@ public class StringToByteConverterTest extends TestCase {
 
 	public void testConvertsToBytePrimitive() throws Exception {
 		converter = StringToByteConverter.toByte(numberFormat, true);
-		Byte value = new Byte((byte) 1);
+		Byte value = Byte.valueOf((byte) 1);
 		Byte result = (Byte) converter.convert(numberFormat.format(value));
 		assertEquals(value, result);
 	}
